--- a/cp3/ta/docker-compose.yml
+++ b/cp3/ta/docker-compose.yml
@@ -19,24 +19,18 @@ services:
     expose:
       - 11311
     command: roscore
-    
-  gazebo:
-    build:
-      context: https://github.com/cmu-mars/cp-gazebo-p15.git
-    image: cmu-mars/gazebo
-    container_name: gazebo
-    hostname: gazebo
-    # expose the Gazebo server to the host machine
-    ports:
-      - 11345:11345
+
+  cp3_th:
+    image: docker.darpa-brass.com/ll/cmur-harness
+    container_name: cp3_th
+    hostname: cp3_th
     environment:
-      - "ROS_HOSTNAME=gazebo"
-      - "ROS_MASTER_URI=http://roscore:11311"
-      - "GAZEBO_MASTER_URI=http://localhost:11345"
-    depends_on:
-      - roscore
-    command: roslaunch --wait /home/mars/catkin_ws/src/cp-gazebo/launch/cp1.launch 
-    
+      - "TA_PORT=${TA_PORT}"
+      - "TH_PORT=${TH_PORT}"
+    ports:
+      - ${TH_PORT}:${TH_PORT}
+    command: --cp CP3 --thPort ${TH_PORT} --taHost cp3_ta --taPort 5000
+
   cp3_ta:
     image: cmu-mars/cp3
     container_name: cp3_ta
@@ -44,11 +38,12 @@ services:
     environment:
       - "ROS_HOSTNAME=cp3_ta"
       - "ROS_MASTER_URI=http://roscore:11311"
-      - "TH_URI=${TH_URI}"
-      - "TA_URI=${TA_URI}"
+      - "TA_PORT=${TA_PORT}"
     ports:
-      - 8080:8080
+      - ${TA_PORT}:5000
     depends_on:
       - roscore
-      - gazebo
+      - cp3_th
+    expose:
+      - 5000
     command: bash -c "cd /usr/src/app && python3 -u -m swagger_server ${TH_URI} ${TA_URI}"
