--- a/cp1/ta/docker-compose.yml
+++ b/cp1/ta/docker-compose.yml
@@ -47,4 +47,4 @@ services:
       - cp1_th
     expose:
       - 5000
-    command: bash -c "cd /usr/src/app && python3 -u -m swagger_server http://cp1_th:${TH_PORT} 5000"
+    command: bash -c "cd /usr/src/app && python3 -u -m swagger_server http://cp1_th:${TH_PORT}"
