--- a/cp-gazebo-p2/Dockerfile
+++ b/cp-gazebo-p2/Dockerfile
@@ -8,6 +8,13 @@ RUN sudo apt-get update && \
                             apt-utils \
                             xvfb
 
+# get a modified version of Gazebo that works on VMs
+RUN sudo apt-get install -y libignition-math2-dev && \
+    sudo sh -c 'echo "deb http://packages.osrfoundation.org/gazebo/ubuntu-stable `lsb_release -cs` main" > /etc/apt/sources.list.d/gazebo-stable.list' && \
+    wget http://packages.osrfoundation.org/gazebo.key -O - | sudo apt-key add - && \
+    sudo apt-get update && \
+    sudo apt-get install -y gazebo7 
+                            
 # this code should only be needed by a small number of packages
 ENV TURTLEBOT_VERSION 2.4.2
 RUN wget -q "https://github.com/turtlebot/turtlebot/archive/${TURTLEBOT_VERSION}.tar.gz" && \
@@ -21,7 +28,6 @@ RUN wget -q "https://github.com/turtlebot/turtlebot_apps/archive/${TURTLEBOT_APP
     rm "${TURTLEBOT_APPS_VERSION}.tar.gz" && \
     mv "turtlebot_apps-${TURTLEBOT_APPS_VERSION}" src/turtlebot_apps
 
-ADD cp-gazebo src/cp-gazebo
 
 RUN . /opt/ros/kinetic/setup.sh && \
     sudo chown -R $(whoami):$(whoami) . && \
@@ -29,12 +35,9 @@ RUN . /opt/ros/kinetic/setup.sh && \
     rosdep install -y --from-paths . --ignore-src --rosdistro=kinetic && \
     catkin_make install
 
-# get a modified version of Gazebo that works on VMs
-RUN sudo apt-get install -y libignition-math2-dev && \
-    sudo sh -c 'echo "deb http://packages.osrfoundation.org/gazebo/ubuntu-stable `lsb_release -cs` main" > /etc/apt/sources.list.d/gazebo-stable.list' && \
-    wget http://packages.osrfoundation.org/gazebo.key -O - | sudo apt-key add - && \
-    sudo apt-get update && \
-    sudo apt-get install -y gazebo7 
+
 
 # use a modified entrypoint script
+ADD cp_gazebo src/cp_gazebo
+
 ADD entrypoint.sh entrypoint.sh
