--- a/documents/swagger-yaml/cp1-th.yaml
+++ b/documents/swagger-yaml/cp1-th.yaml
@@ -30,17 +30,12 @@ paths:
 
                     * b - perturbations, but no adaptation, no power model
 
-                    * bprime - perturbations and adaptation, but a static
-                          power model for discharge/charge, while planner
-                          uses a different static power model
-
                     * c - perturbations and adaptation, with charge and
                           discharge power models provided and learned
                 type: string
                 enum:
                   - a
                   - b
-                  - bprime
                   - c
               start-loc:
                 type: string
@@ -59,37 +54,25 @@ paths:
                   `target-locs` must be disequal -- that is to say, it is
                   not permitted to direct the robot to travel to the
                   waypoint where it is already located.
-              discharge-function:
-                type: string
-                format: function-spec
+              power-model:
+                type: int
+                minimum: 0
+                maximum: 99
                 description: >-
-                  if in level d, a description of the function dictating
-                  the discharge of the battery, which is what we will
-                  learn.
+                  if in level c, the name of the power model from the test
+                  data to use for this test. each power model includes at
+                  least a function describing how the battery charges,
+                  discharges, and a maximum possible charge.
               discharge-budget:
                 type: integer
                 description: >-
-                  if in level d, the maximum number of queries against the
+                  if in level c, the maximum number of queries against the
                   target function during learning
-              charge-function:
-                type: string
-                format: function-spec
-                description: >-
-                  if in level d, a description of the function dictating
-                  the recharging of the battery, which is what we will
-                  learn.
               charge-budget:
                 type: integer
                 description: >-
-                  if in level d, the maximum number of queries against the
+                  if in level c, the maximum number of queries against the
                   target recharging function during learning
-              max-charge:
-                type: integer
-                minimum: 0
-                description: >-
-                  if in level d, the maximum charge the battery can hold,
-                  in mWh. implicitly, all batteries have a minimum possible
-                  charge of 0 mWh
         '400':
           description: TH encountered an error producing configuration data
   /error:
