making time vs sim-time consistent in cp1 TH

--- a/documents/swagger-yaml/cp1-th.yaml
+++ b/documents/swagger-yaml/cp1-th.yaml
@@ -266,7 +266,7 @@ paths:
                         way point
                       type: number
                       format: float
-                    time:
+                    sim-time:
                       description: >-
                         the simulation time when the robot reached this way
                         point
