--- a/documents/swagger-yaml/cp2-ta.yaml
+++ b/documents/swagger-yaml/cp2-ta.yaml
@@ -1,7 +1,7 @@
 swagger: '2.0'
 info:
   version: '0.1'
-  title: 'cmu mars brass ta: phase 2, cp2'
+  title: 'CMU MARS BRASS TA: Phase II, CP2'
 schemes:
   - http
 host: brass-ta
