Changed Docker so that container is built on cp3_base, not just base

--- a/cp3/ta/Dockerfile
+++ b/cp3/ta/Dockerfile
@@ -1,4 +1,4 @@
-FROM cmu-mars/base
+FROM cmu-mars/cp3_base
 
 RUN sudo apt-get install ca-certificates                                                                                          
 ENV GPG_KEY=0D96DF4D4110E5C43FBFB17F2D347EA6AA65421D
