Added instruction graph installation to main

--- a/mars-main-p2/Dockerfile
+++ b/mars-main-p2/Dockerfile
@@ -32,7 +32,7 @@ RUN sudo apt-get update && \
 # install Kobuki (does this really belong here?)
 RUN sudo apt-get install -y ros-kinetic-kobuki ros-kinetic-kobuki-core
 
-# install the maps
+# install the maps -- BRS Does this need to be here? CP3 uses different maps
 ENV CP_MAPS_REV 80afb8f
 RUN git clone https://github.com/cmu-mars/cp-maps-p15 src/maps && \
     cd src/maps && \
@@ -44,6 +44,18 @@ RUN git clone https://github.com/cmu-mars/cp-models-p15 \
               src/cp-models-p15 && \
     cd src/cp-models-p15 && \
     git checkout "${MARS_MODELS_REVISION}"
+
+# install the instruction graph interpreter
+RUN git clone https://github.com/cmu-mars/notifications-p15 \
+      --depth 1 \
+      src/notifications
+
+
+ENV IG_INTERPRETER_REV 8955f42
+RUN git clone https://github.com/cmu-mars/ig-action-server-p15.git \
+            src/ig-interpreter
+    cd src/ig-interpreter
+    git checkout "${IG_INTERPRETER_REV}"
 
 # add the entrypoint script
 ADD entrypoint.sh entrypoint.sh
