--- a/documents/swagger-yaml/cp3-ta.yaml
+++ b/documents/swagger-yaml/cp3-ta.yaml
@@ -87,9 +87,9 @@ paths:
               id:
                 type: string
                 enum:
-                  - kinect-ir
+                  - kinect
                   - lidar
-                  - kinect-all
+                  - camera
                 description: >-
                   which sensor of SENSORSET to set
               state:
