--- a/documents/swagger-yaml/cp3-th.yaml
+++ b/documents/swagger-yaml/cp3-th.yaml
@@ -181,6 +181,12 @@ paths:
                 type: array
                 items:
                   type: string
+                  enum:
+                    - AMCL_KINECT
+                    - AMCL_LIDAR
+                    - MPRT_KINECT
+                    - MPRT_LIDAR
+                    - ARUCO_CAMERA
               sensors:
                 description: >-
                   list of currently active sensors, in order. This will
@@ -188,6 +194,11 @@ paths:
                 type: array
                 items:
                   type: string
+                  enum:
+                    - kinect
+                    - lidar
+                    - camera
+                    - headlamp
       responses:
         '200':
           description: the TH acknowledges the status of the SUT
@@ -206,7 +217,6 @@ paths:
               - final-x
               - final-y
               - final-sim-time
-              - arrival-predictions
               - final-charge
               - collisions
               - num-adaptations
@@ -226,14 +236,6 @@ paths:
                 type: integer
                 minimum: 0
                 description: the simulation time when the mission finished
-              arrival-predictions:
-                type: array
-                items:
-                  type: integer
-                  minimum: 0
-                description: >-
-                  all the predicted arrival times made by the SUT during
-                       the test, in the order they were made.
               final-charge:
                 type: integer
                 minimum: 0
