--- a/documents/swagger-yaml/cp2-ta.yaml
+++ b/documents/swagger-yaml/cp2-ta.yaml
@@ -56,13 +56,13 @@ definitions:
   PerturbationKind:
     type: string
     enum:
-      - DeleteVoidFunctionCall
-      - FlipArithmeticOperator
-      - FlipBooleanOperator
-      - FlipRelationalOperator
-      - UndoTransformation
-      - DeleteConditionalControlFlow
-      - FlipSignedness
+      - delete-void-function-call
+      - flip-arithmetic-operator
+      - flip-boolean-operator
+      - flip-relational-operator
+      - undo-transformation
+      - delete-conditional-control-flow
+      - flip-signedness
     description: >-
       A description of the kind of the perturbation.
 
