adding config module for shared state; working out most of the TA end points; dockerfile edits

--- a/cp3/ta/Dockerfile
+++ b/cp3/ta/Dockerfile
@@ -1,8 +1,8 @@
 FROM cmu-mars/cp3_base
 
-RUN sudo apt-get install ca-certificates                                                                                          
+RUN sudo apt-get install ca-certificates
 ENV GPG_KEY=0D96DF4D4110E5C43FBFB17F2D347EA6AA65421D
-ENV PYTHON_VERSION=3.6.3 
+ENV PYTHON_VERSION=3.6.3
 
 RUN sudo apt-get update
 #    runDeps="$(   scanelf --needed --nobanner --recursive /usr/local    | awk '{ gsub(/,/, "\nso:", $2); print "so:" $2 }'    | sort -u    | xargs -r apt info --installed    | sort -u  )"  && \
@@ -16,7 +16,7 @@ RUN sudo apt-get update
 #                            apt-utils
 
 RUN sudo apt-get install ros-kinetic-gazebo-msgs
-                            
+
 ENV ROS_NAVIGATION_MSGS_VERSION 1.13.0
 RUN wget -q "https://github.com/ros-planning/navigation_msgs/archive/${ROS_NAVIGATION_MSGS_VERSION}.tar.gz" && \
     tar -xvf "${ROS_NAVIGATION_MSGS_VERSION}.tar.gz" && \
@@ -25,7 +25,7 @@ RUN wget -q "https://github.com/ros-planning/navigation_msgs/archive/${ROS_NAVIG
     rm navigation_msgs/README.md && \
     mv navigation_msgs/* src && \
     rm -rf navigation_msgs
-    
+
 RUN sudo apt-get install -y python3
 
 RUN sudo apt-get install -y python3-pip
@@ -47,5 +47,7 @@ RUN sudo chown -R mars /usr/src/app
 ENV PYTHONUNBUFFERED 0
 
 EXPOSE 8080
+
+CMD source ~/catkin_ws/install/setup.bash
 
 CMD ["python3", "-m", "swagger_server"]
